// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Jobs /> should render properly with jobs 1`] = `
Array [
  .emotion-0 {
  font-size: 18px;
  line-height: 21px;
  font-weight: 400;
  padding-top: 24px;
  padding-bottom: 16px;
}

<h2
    className="emotion-0"
  >
    Job Queue
  </h2>,
  .emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding-top: 24px;
  padding-bottom: 16px;
}

.emotion-0 {
  color: #b3b3b3;
  font-weight: 400;
}

.emotion-3 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  height: 32px;
}

.emotion-3:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-3[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-3,
.emotion-3:hover,
.emotion-3:visited {
  background-color: #73b61c;
}

.emotion-3:hover {
  background-color: #96c955;
}

.emotion-3[aria-disabled=true] {
  background-color: #808080;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-1 {
  padding-left: 4px;
}

.emotion-5 {
  text-align: left;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  color: #e0e0e0;
  background-color: #4a4a4a;
  padding: 12px 16px;
  border-bottom: 1px solid #2e2e2e;
}

.emotion-5:nth-of-type(2) {
  width: 100%;
}

.emotion-5:not(:last-child) {
  border-right: 1px solid #2e2e2e;
}

.emotion-12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-127 {
  height: auto;
}

.emotion-126 {
  width: 100%;
  height: auto;
  border-spacing: 0;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.5);
  white-space: nowrap;
}

.emotion-126 tr {
  background-color: #252525;
}

.emotion-126 tr:nth-of-type(2n) {
  background-color: #2e2e2e;
}

.emotion-126 tr:hover {
  background-color: #4a4a4a;
  box-shadow: 0 0 5px 0 rgba(0,0,0,0.5);
}

.emotion-126 tr:hover .gear {
  color: #b3b3b3;
}

.emotion-126 tr:hover td {
  border: 1px solid #808080;
  border-left: 0;
  border-right: 0;
}

.emotion-126 tr:hover td:first-of-type {
  border-left: 1px solid #808080;
}

.emotion-126 tr:hover td:last-of-type {
  border-right: 1px solid #808080;
}

.emotion-126 td {
  max-width: calc(100vw / 7);
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  color: #e0e0e0;
  padding: 8px 16px;
  border: 1px solid transparent;
  border-left: 0;
  border-right: 0;
}

.emotion-126 td:first-of-type {
  border-left: 1px solid transparent;
}

.emotion-126 td:last-of-type {
  border-right: 1px solid transparent;
  overflow: visible;
}

.emotion-27 {
  cursor: pointer;
}

.emotion-14 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 8px;
  border-radius: 2px;
  color: #ebb52e;
  background-color: #191919;
  font-family: Roboto Condensed;
}

.emotion-15:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-16 {
  text-align: center;
}

.emotion-18 {
  margin: 0 auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  min-width: 32px;
  height: 32px;
  padding: 8px;
  font-weight: 700;
  font-size: 15px;
  line-height: 19px;
  border-radius: 32px;
  color: #c92300;
  background-color: #191919;
}

.emotion-18:hover {
  border: 2px solid #808080;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
}

.emotion-24 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 16px;
  width: 212px;
  position: relative;
}

.emotion-23 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
}

.emotion-19 {
  height: 100%;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
  background-color: #c92300;
}

.emotion-19:first-of-type {
  border-top-left-radius: 4px;
  border-bottom-left-radius: 4px;
}

.emotion-19:last-of-type {
  border-top-right-radius: 4px;
  border-bottom-right-radius: 4px;
}

.emotion-20 {
  height: 100%;
  -webkit-flex: 5 0 auto;
  -ms-flex: 5 0 auto;
  flex: 5 0 auto;
  background-color: #4ac565;
}

.emotion-20:first-of-type {
  border-top-left-radius: 4px;
  border-bottom-left-radius: 4px;
}

.emotion-20:last-of-type {
  border-top-right-radius: 4px;
  border-bottom-right-radius: 4px;
}

.emotion-21 {
  height: 100%;
  -webkit-flex: 5 0 auto;
  -ms-flex: 5 0 auto;
  flex: 5 0 auto;
  background-color: #ebb52e;
}

.emotion-21:first-of-type {
  border-top-left-radius: 4px;
  border-bottom-left-radius: 4px;
}

.emotion-21:last-of-type {
  border-top-right-radius: 4px;
  border-bottom-right-radius: 4px;
}

.emotion-22 {
  height: 100%;
  -webkit-flex: 5 0 auto;
  -ms-flex: 5 0 auto;
  flex: 5 0 auto;
  background-color: #4a90e2;
}

.emotion-22:first-of-type {
  border-top-left-radius: 4px;
  border-bottom-left-radius: 4px;
}

.emotion-22:last-of-type {
  border-top-right-radius: 4px;
  border-bottom-right-radius: 4px;
}

.emotion-26 {
  position: relative;
}

.emotion-25 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  padding: 0;
  color: #191919;
  padding: 6px;
  margin: -6px;
  border-radius: 32px;
}

.emotion-25:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-25[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-25:hover {
  color: #ffffff !important;
  background-color: #808080;
}

.emotion-28 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 8px;
  border-radius: 2px;
  color: #b3b3b3;
  background-color: #191919;
  font-family: Roboto Condensed;
}

.emotion-36 {
  height: 100%;
  -webkit-flex: 14 0 auto;
  -ms-flex: 14 0 auto;
  flex: 14 0 auto;
  background-color: #4a90e2;
}

.emotion-36:first-of-type {
  border-top-left-radius: 4px;
  border-bottom-left-radius: 4px;
}

.emotion-36:last-of-type {
  border-top-right-radius: 4px;
  border-bottom-right-radius: 4px;
}

.emotion-42 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 8px;
  border-radius: 2px;
  color: #4ac565;
  background-color: #191919;
  font-family: Roboto Condensed;
}

.emotion-48 {
  height: 100%;
  -webkit-flex: 8 0 auto;
  -ms-flex: 8 0 auto;
  flex: 8 0 auto;
  background-color: #4ac565;
}

.emotion-48:first-of-type {
  border-top-left-radius: 4px;
  border-bottom-left-radius: 4px;
}

.emotion-48:last-of-type {
  border-top-right-radius: 4px;
  border-bottom-right-radius: 4px;
}

.emotion-49 {
  height: 100%;
  -webkit-flex: 4 0 auto;
  -ms-flex: 4 0 auto;
  flex: 4 0 auto;
  background-color: #4a90e2;
}

.emotion-49:first-of-type {
  border-top-left-radius: 4px;
  border-bottom-left-radius: 4px;
}

.emotion-49:last-of-type {
  border-top-right-radius: 4px;
  border-bottom-right-radius: 4px;
}

.emotion-53 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 8px;
  border-radius: 2px;
  color: #4a4a4a;
  background-color: #191919;
  font-family: Roboto Condensed;
}

.emotion-62 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 8px;
  border-radius: 2px;
  color: #c92300;
  background-color: #191919;
  font-family: Roboto Condensed;
}

.emotion-73 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 8px;
  border-radius: 2px;
  color: #191919;
  background-color: #ebb52e;
  font-family: Roboto Condensed;
}

.emotion-88 {
  height: 100%;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
  background-color: #4ac565;
}

.emotion-88:first-of-type {
  border-top-left-radius: 4px;
  border-bottom-left-radius: 4px;
}

.emotion-88:last-of-type {
  border-top-right-radius: 4px;
  border-bottom-right-radius: 4px;
}

<div
    className="emotion-127"
  >
    <div
      className="emotion-4"
    >
      <h3
        className="emotion-0"
      >
        Number of Jobs: 
        11
      </h3>
      <button
        className="emotion-3"
        onClick={[Function]}
        type="button"
      >
        <div
          className="emotion-2"
        >
          <svg
            color="#ffffff"
            data-file-name="refresh.svg"
            width={20}
          />
          <div
            className="emotion-1"
          >
            Refresh Jobs
          </div>
        </div>
      </button>
    </div>
    <table
      className="emotion-126"
    >
      <thead>
        <tr>
          <th
            className="emotion-5"
          >
            Status
          </th>
          <th
            className="emotion-5"
          >
            Job Name
          </th>
          <th
            className="emotion-5"
          >
            Priority
          </th>
          <th
            className="emotion-5"
          >
            Created
          </th>
          <th
            className="emotion-5"
          >
            # Assets
          </th>
          <th
            className="emotion-5"
          >
            Errors
          </th>
          <th
            className="emotion-5"
          >
            Task Progress
          </th>
          <th
            className="emotion-5"
          >
            <div
              className="emotion-12"
            >
              <svg
                data-file-name="gear.svg"
                width={20}
              />
            </div>
          </th>
        </tr>
      </thead>
      <tbody>
        <tr
          className="emotion-27"
          onClick={[Function]}
        >
          <td>
            <div
              className="emotion-14"
            >
              In Progress
            </div>
          </td>
          <td>
            <a
              className="emotion-15"
              href="/76917058-b147-4556-987a-0a0f11e46d9b/jobs/82d5308b-67c2-1433-8fef-0a580a000956"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              test-whitespace.json
            </a>
          </td>
          <td
            className="emotion-16"
          >
            100
          </td>
          <td>
            2019-11-07 01:38:36
          </td>
          <td
            className="emotion-16"
          >
            4
          </td>
          <td>
            <a
              className="emotion-18"
              href="/76917058-b147-4556-987a-0a0f11e46d9b/jobs/82d5308b-67c2-1433-8fef-0a580a000956/errors"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              4
            </a>
          </td>
          <td
            style={
              Object {
                "minWidth": 244,
                "overflow": "visible",
              }
            }
          >
            <div
              aria-label="Progress Bar"
              className="emotion-24"
              onKeyPress={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              role="button"
              tabIndex="0"
            >
              <div
                className="emotion-23"
              >
                <div
                  className="emotion-19"
                />
                <div
                  className="emotion-20"
                />
                <div
                  className="emotion-21"
                />
                <div
                  className="emotion-22"
                />
              </div>
            </div>
          </td>
          <td>
            <div
              className="emotion-26"
            >
              <button
                aria-label="Toggle Actions Menu"
                className="gear emotion-25"
                onBlur={[Function]}
                onClick={[Function]}
                type="button"
              >
                <svg
                  data-file-name="gear.svg"
                  width={20}
                />
              </button>
            </div>
          </td>
        </tr>
        <tr
          className="emotion-27"
          onClick={[Function]}
        >
          <td>
            <div
              className="emotion-28"
            >
              Cancelled
            </div>
          </td>
          <td>
            <a
              className="emotion-15"
              href="/76917058-b147-4556-987a-0a0f11e46d9b/jobs/82d5308b-67c2-1433-8fef-0a580a000955"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              test-whitespace.json
            </a>
          </td>
          <td
            className="emotion-16"
          >
            100
          </td>
          <td>
            2019-11-07 01:38:36
          </td>
          <td
            className="emotion-16"
          >
            40
          </td>
          <td>
            <a
              className="emotion-18"
              href="/76917058-b147-4556-987a-0a0f11e46d9b/jobs/82d5308b-67c2-1433-8fef-0a580a000955/errors"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              40
            </a>
          </td>
          <td
            style={
              Object {
                "minWidth": 244,
                "overflow": "visible",
              }
            }
          >
            <div
              aria-label="Progress Bar"
              className="emotion-24"
              onKeyPress={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              role="button"
              tabIndex="0"
            >
              <div
                className="emotion-23"
              >
                <div
                  className="emotion-19"
                />
                <div
                  className="emotion-20"
                />
                <div
                  className="emotion-21"
                />
                <div
                  className="emotion-36"
                />
              </div>
            </div>
          </td>
          <td>
            <div
              className="emotion-26"
            >
              <button
                aria-label="Toggle Actions Menu"
                className="gear emotion-25"
                onBlur={[Function]}
                onClick={[Function]}
                type="button"
              >
                <svg
                  data-file-name="gear.svg"
                  width={20}
                />
              </button>
            </div>
          </td>
        </tr>
        <tr
          className="emotion-27"
          onClick={[Function]}
        >
          <td>
            <div
              className="emotion-42"
            >
              Success
            </div>
          </td>
          <td>
            <a
              className="emotion-15"
              href="/76917058-b147-4556-987a-0a0f11e46d9b/jobs/82d5308a-67c2-1433-8fef-0a580a000955"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              test-whitespace.json
            </a>
          </td>
          <td
            className="emotion-16"
          >
            100
          </td>
          <td>
            2019-11-07 01:36:29
          </td>
          <td
            className="emotion-16"
          >
            400
          </td>
          <td>
            <a
              className="emotion-18"
              href="/76917058-b147-4556-987a-0a0f11e46d9b/jobs/82d5308a-67c2-1433-8fef-0a580a000955/errors"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              400
            </a>
          </td>
          <td
            style={
              Object {
                "minWidth": 244,
                "overflow": "visible",
              }
            }
          >
            <div
              aria-label="Progress Bar"
              className="emotion-24"
              onKeyPress={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              role="button"
              tabIndex="0"
            >
              <div
                className="emotion-23"
              >
                <div
                  className="emotion-19"
                />
                <div
                  className="emotion-48"
                />
                <div
                  className="emotion-49"
                />
              </div>
            </div>
          </td>
          <td />
        </tr>
        <tr
          className="emotion-27"
          onClick={[Function]}
        >
          <td>
            <div
              className="emotion-53"
            >
              Archived
            </div>
          </td>
          <td>
            <a
              className="emotion-15"
              href="/76917058-b147-4556-987a-0a0f11e46d9b/jobs/82d53089-67c2-1433-8fef-0a580a000955"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              test-whitespace.json
            </a>
          </td>
          <td
            className="emotion-16"
          >
            100
          </td>
          <td>
            2019-11-07 01:35:36
          </td>
          <td
            className="emotion-16"
          >
            4000
          </td>
          <td>
            <a
              className="emotion-18"
              href="/76917058-b147-4556-987a-0a0f11e46d9b/jobs/82d53089-67c2-1433-8fef-0a580a000955/errors"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              4000
            </a>
          </td>
          <td
            style={
              Object {
                "minWidth": 244,
                "overflow": "visible",
              }
            }
          >
            <div
              aria-label="Progress Bar"
              className="emotion-24"
              onKeyPress={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              role="button"
              tabIndex="0"
            >
              <div
                className="emotion-23"
              >
                <div
                  className="emotion-19"
                />
              </div>
            </div>
          </td>
          <td />
        </tr>
        <tr
          className="emotion-27"
          onClick={[Function]}
        >
          <td>
            <div
              className="emotion-62"
            >
              Failure
            </div>
          </td>
          <td>
            <a
              className="emotion-15"
              href="/76917058-b147-4556-987a-0a0f11e46d9b/jobs/c0975970-62ef-1f81-83f8-0a580a000954"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              test_officer
            </a>
          </td>
          <td
            className="emotion-16"
          >
            100
          </td>
          <td>
            2019-10-11 21:11:03
          </td>
          <td
            className="emotion-16"
          >
            40000
          </td>
          <td>
            <a
              className="emotion-18"
              href="/76917058-b147-4556-987a-0a0f11e46d9b/jobs/c0975970-62ef-1f81-83f8-0a580a000954/errors"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              40000
            </a>
          </td>
          <td
            style={
              Object {
                "minWidth": 244,
                "overflow": "visible",
              }
            }
          >
            <div
              aria-label="Progress Bar"
              className="emotion-24"
              onKeyPress={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              role="button"
              tabIndex="0"
            >
              <div
                className="emotion-23"
              >
                <div
                  className="emotion-19"
                />
              </div>
            </div>
          </td>
          <td>
            <div
              className="emotion-26"
            >
              <button
                aria-label="Toggle Actions Menu"
                className="gear emotion-25"
                onBlur={[Function]}
                onClick={[Function]}
                type="button"
              >
                <svg
                  data-file-name="gear.svg"
                  width={20}
                />
              </button>
            </div>
          </td>
        </tr>
        <tr
          className="emotion-27"
          onClick={[Function]}
        >
          <td>
            <div
              className="emotion-73"
            >
              Paused
            </div>
          </td>
          <td>
            <a
              className="emotion-15"
              href="/76917058-b147-4556-987a-0a0f11e46d9b/jobs/c097596f-62ef-1f81-83f8-0a580a000954"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              test_officer
            </a>
          </td>
          <td
            className="emotion-16"
          >
            100
          </td>
          <td>
            2019-10-11 21:03:27
          </td>
          <td
            className="emotion-16"
          >
            400000
          </td>
          <td>
            <a
              className="emotion-18"
              href="/76917058-b147-4556-987a-0a0f11e46d9b/jobs/c097596f-62ef-1f81-83f8-0a580a000954/errors"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              400000
            </a>
          </td>
          <td
            style={
              Object {
                "minWidth": 244,
                "overflow": "visible",
              }
            }
          >
            <div
              aria-label="Progress Bar"
              className="emotion-24"
              onKeyPress={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              role="button"
              tabIndex="0"
            >
              <div
                className="emotion-23"
              >
                <div
                  className="emotion-19"
                />
              </div>
            </div>
          </td>
          <td>
            <div
              className="emotion-26"
            >
              <button
                aria-label="Toggle Actions Menu"
                className="gear emotion-25"
                onBlur={[Function]}
                onClick={[Function]}
                type="button"
              >
                <svg
                  data-file-name="gear.svg"
                  width={20}
                />
              </button>
            </div>
          </td>
        </tr>
        <tr
          className="emotion-27"
          onClick={[Function]}
        >
          <td>
            <div
              className="emotion-42"
            >
              Success
            </div>
          </td>
          <td>
            <a
              className="emotion-15"
              href="/76917058-b147-4556-987a-0a0f11e46d9b/jobs/1585ca03-4db0-14d1-8edd-0a580a000926"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              flipbook_export_1
            </a>
          </td>
          <td
            className="emotion-16"
          >
            1
          </td>
          <td>
            2019-08-01 22:52:19
          </td>
          <td
            className="emotion-16"
          >
            0
          </td>
          <td />
          <td
            style={
              Object {
                "minWidth": 244,
                "overflow": "visible",
              }
            }
          >
            <div
              aria-label="Progress Bar"
              className="emotion-24"
              onKeyPress={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              role="button"
              tabIndex="0"
            >
              <div
                className="emotion-23"
              >
                <div
                  className="emotion-88"
                />
              </div>
            </div>
          </td>
          <td />
        </tr>
        <tr
          className="emotion-27"
          onClick={[Function]}
        >
          <td>
            <div
              className="emotion-42"
            >
              Success
            </div>
          </td>
          <td>
            <a
              className="emotion-15"
              href="/76917058-b147-4556-987a-0a0f11e46d9b/jobs/be47702d-cbd6-1cce-a096-0a580a000920"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              export_7_8_2019
            </a>
          </td>
          <td
            className="emotion-16"
          >
            1
          </td>
          <td>
            2019-07-08 18:53:44
          </td>
          <td
            className="emotion-16"
          >
            0
          </td>
          <td />
          <td
            style={
              Object {
                "minWidth": 244,
                "overflow": "visible",
              }
            }
          >
            <div
              aria-label="Progress Bar"
              className="emotion-24"
              onKeyPress={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              role="button"
              tabIndex="0"
            >
              <div
                className="emotion-23"
              >
                <div
                  className="emotion-19"
                />
              </div>
            </div>
          </td>
          <td />
        </tr>
        <tr
          className="emotion-27"
          onClick={[Function]}
        >
          <td>
            <div
              className="emotion-42"
            >
              Success
            </div>
          </td>
          <td>
            <a
              className="emotion-15"
              href="/76917058-b147-4556-987a-0a0f11e46d9b/jobs/be47702c-cbd6-1cce-a096-0a580a000920"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              export_7_8_2019___
            </a>
          </td>
          <td
            className="emotion-16"
          >
            1
          </td>
          <td>
            2019-07-08 18:43:03
          </td>
          <td
            className="emotion-16"
          >
            0
          </td>
          <td />
          <td
            style={
              Object {
                "minWidth": 244,
                "overflow": "visible",
              }
            }
          >
            <div
              aria-label="Progress Bar"
              className="emotion-24"
              onKeyPress={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              role="button"
              tabIndex="0"
            >
              <div
                className="emotion-23"
              >
                <div
                  className="emotion-19"
                />
              </div>
            </div>
          </td>
          <td />
        </tr>
        <tr
          className="emotion-27"
          onClick={[Function]}
        >
          <td>
            <div
              className="emotion-42"
            >
              Success
            </div>
          </td>
          <td>
            <a
              className="emotion-15"
              href="/76917058-b147-4556-987a-0a0f11e46d9b/jobs/acd91540-08c1-199f-b899-0a580a00091e"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              sdlc-testdata-import.json
            </a>
          </td>
          <td
            className="emotion-16"
          >
            100
          </td>
          <td>
            2019-07-03 16:49:15
          </td>
          <td
            className="emotion-16"
          >
            0
          </td>
          <td />
          <td
            style={
              Object {
                "minWidth": 244,
                "overflow": "visible",
              }
            }
          >
            <div
              aria-label="Progress Bar"
              className="emotion-24"
              onKeyPress={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              role="button"
              tabIndex="0"
            >
              <div
                className="emotion-23"
              >
                <div
                  className="emotion-19"
                />
              </div>
            </div>
          </td>
          <td />
        </tr>
        <tr
          className="emotion-27"
          onClick={[Function]}
        >
          <td>
            <div
              className="emotion-42"
            >
              Success
            </div>
          </td>
          <td>
            <a
              className="emotion-15"
              href="/76917058-b147-4556-987a-0a0f11e46d9b/jobs/acd9153f-08c1-199f-b899-0a580a00091e"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              sdlc-testdata-import.json
            </a>
          </td>
          <td
            className="emotion-16"
          >
            100
          </td>
          <td>
            2019-07-03 01:29:41
          </td>
          <td
            className="emotion-16"
          >
            49
          </td>
          <td>
            <a
              className="emotion-18"
              href="/76917058-b147-4556-987a-0a0f11e46d9b/jobs/acd9153f-08c1-199f-b899-0a580a00091e/errors"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              49
            </a>
          </td>
          <td
            style={
              Object {
                "minWidth": 244,
                "overflow": "visible",
              }
            }
          >
            <div
              aria-label="Progress Bar"
              className="emotion-24"
              onKeyPress={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              role="button"
              tabIndex="0"
            >
              <div
                className="emotion-23"
              >
                <div
                  className="emotion-19"
                />
                <div
                  className="emotion-88"
                />
              </div>
            </div>
          </td>
          <td />
        </tr>
      </tbody>
    </table>
    <div>
       
    </div>
    <Pagination
      currentPage={1}
      totalPages={1}
    />
    <div>
       
    </div>
  </div>,
]
`;

exports[`<Jobs /> should render properly with no jobs 1`] = `
Array [
  .emotion-0 {
  font-size: 18px;
  line-height: 21px;
  font-weight: 400;
  padding-top: 24px;
  padding-bottom: 16px;
}

<h2
    className="emotion-0"
  >
    Job Queue
  </h2>,
  .emotion-18 {
  height: 100%;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding-top: 24px;
  padding-bottom: 16px;
}

.emotion-0 {
  color: #b3b3b3;
  font-weight: 400;
}

.emotion-3 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  height: 32px;
}

.emotion-3:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-3[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-3,
.emotion-3:hover,
.emotion-3:visited {
  background-color: #73b61c;
}

.emotion-3:hover {
  background-color: #96c955;
}

.emotion-3[aria-disabled=true] {
  background-color: #808080;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-1 {
  padding-left: 4px;
}

.emotion-17 {
  width: 100%;
  height: 100%;
  border-spacing: 0;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.5);
  white-space: nowrap;
}

.emotion-17 tr {
  background-color: #252525;
}

.emotion-17 tr:nth-of-type(2n) {
  background-color: #2e2e2e;
}

.emotion-17 tr:hover {
  background-color: #4a4a4a;
  box-shadow: 0 0 5px 0 rgba(0,0,0,0.5);
}

.emotion-17 tr:hover .gear {
  color: #b3b3b3;
}

.emotion-17 tr:hover td {
  border: 1px solid #808080;
  border-left: 0;
  border-right: 0;
}

.emotion-17 tr:hover td:first-of-type {
  border-left: 1px solid #808080;
}

.emotion-17 tr:hover td:last-of-type {
  border-right: 1px solid #808080;
}

.emotion-17 td {
  max-width: calc(100vw / 7);
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  color: #e0e0e0;
  padding: 8px 16px;
  border: 1px solid transparent;
  border-left: 0;
  border-right: 0;
}

.emotion-17 td:first-of-type {
  border-left: 1px solid transparent;
}

.emotion-17 td:last-of-type {
  border-right: 1px solid transparent;
  overflow: visible;
}

.emotion-5 {
  text-align: left;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  color: #e0e0e0;
  background-color: #4a4a4a;
  padding: 12px 16px;
  border-bottom: 1px solid #2e2e2e;
}

.emotion-5:nth-of-type(2) {
  width: 100%;
}

.emotion-5:not(:last-child) {
  border-right: 1px solid #2e2e2e;
}

.emotion-12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-16 {
  height: 100%;
  pointer-events: none;
}

.emotion-15 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  text-align: center;
  color: #808080;
  font-size: 15px;
  line-height: 19px;
}

.emotion-14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 18px;
  line-height: 21px;
}

<div
    className="emotion-18"
  >
    <div
      className="emotion-4"
    >
      <h3
        className="emotion-0"
      >
        Number of Jobs: 
        0
      </h3>
      <button
        className="emotion-3"
        onClick={[Function]}
        type="button"
      >
        <div
          className="emotion-2"
        >
          <svg
            color="#ffffff"
            data-file-name="refresh.svg"
            width={20}
          />
          <div
            className="emotion-1"
          >
            Refresh Jobs
          </div>
        </div>
      </button>
    </div>
    <table
      className="emotion-17"
    >
      <thead>
        <tr>
          <th
            className="emotion-5"
          >
            Status
          </th>
          <th
            className="emotion-5"
          >
            Job Name
          </th>
          <th
            className="emotion-5"
          >
            Priority
          </th>
          <th
            className="emotion-5"
          >
            Created
          </th>
          <th
            className="emotion-5"
          >
            # Assets
          </th>
          <th
            className="emotion-5"
          >
            Errors
          </th>
          <th
            className="emotion-5"
          >
            Task Progress
          </th>
          <th
            className="emotion-5"
          >
            <div
              className="emotion-12"
            >
              <svg
                data-file-name="gear.svg"
                width={20}
              />
            </div>
          </th>
        </tr>
      </thead>
      <tbody>
        <tr
          className="emotion-16"
        >
          <td
            colSpan={8}
          >
            <div
              className="emotion-15"
            >
              <div
                className="emotion-14"
              >
                <svg
                  data-file-name="noJobs.svg"
                  width={200}
                />
                <div>
                  There are currently no jobs in the queue.
                </div>
                <div>
                  Any new job will appear here.
                </div>
              </div>
            </div>
          </td>
        </tr>
      </tbody>
    </table>
    <div>
       
    </div>
    <div>
       
    </div>
  </div>,
]
`;
